--- a/manifest.json
+++ b/manifest.json
@@ -21,6 +21,11 @@
 		"default_popup": "popup.html"
 	},
 	
+	"options_ui": {
+		"page": "options.html",
+		"browser_style": true
+	},
+	
 	"permissions": [
 		"https://*/*",
 		"wss://*/*",
