--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,10 @@
 	},
 	
 	"background": {
-		"scripts": ["background.js"]
+		"scripts": [
+			"common.js",
+			"background.js"
+		]
 	},
 	
 	"browser_action": {
@@ -23,7 +26,7 @@
 	
 	"options_ui": {
 		"page": "options.html",
-		"browser_style": true
+		"browser_style": false
 	},
 	
 	"permissions": [
