--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,7 @@
 	
 	"browser_action": {
 		"browser_style": false,
-		"default_icon": "icons/cw_16_none.png",
+		"default_icon": "icons/cw_16.png",
 		"default_title": "Certificate Watch\nNo (relevant) TLS encrypted request in this tab",
 		"default_popup": "popup.html"
 	},
