--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,8 @@
 	"name": "__MSG_extensionName__",
 	"description": "__MSG_extensionDescription__",
 	"author": "PilzAdam",
-	"version": "1.4.0",
+	"homepage_url": "https://github.com/PilzAdam/CertificateWatch",
+	"version": "1.5.0",
 	
 	"default_locale": "en",
 	
