Make "tabs" an optional dependency
When it is first selected in preferences, the user is requested
to grant that permission.
Also describe permissions in README

--- a/manifest.json
+++ b/manifest.json
@@ -40,7 +40,10 @@
 		"webRequest",
 		"webRequestBlocking",
 		"storage",
-		"unlimitedStorage",
+		"unlimitedStorage"
+	],
+
+	"optional_permissions": [
 		"tabs"
 	],
 
