Disallow running in private browsing mode
This doesn't work, see https://bugzilla.mozilla.org/show_bug.cgi?id=1329304

--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,8 @@
 		"tabs"
 	],
 
+	"incognito": "not_allowed",
+
 	"applications": {
 		"gecko": {
 			"id": "{ab8c066f-9e3e-4aa3-997e-dca3520fecd0}"
