Add possibility to set a shortcut for the pop-up
This has no default shortcut, it just creates the possibility
for the user to set one.

--- a/manifest.json
+++ b/manifest.json
@@ -34,6 +34,10 @@
 		"browser_style": false
 	},
 
+	"commands": {
+		"_execute_browser_action": {}
+	},
+
 	"permissions": [
 		"https://*/*",
 		"wss://*/*",
